# rpg_emvs

aruco_localizer/: CMakeLists.txt  package.xml
aruco_localizer/scripts/: aruco_localizer.py
cartesian3dgrid/: CMakeLists.txt
cartesian3dgrid/include/cartesian3dgrid/: cartesian3dgrid.h
cartesian3dgrid/src/: cartesian3dgrid.cpp
mapper_emvs/: CMakeLists.txt  package.xml
mapper_emvs/cfg/: ARIC_experiments.conf  ARIC_new_experiment.conf  ARIC_new_experiment2.conf  EMVSCfg.cfg  corner_events.conf  corners_exp.conf  experiment.conf  green_detection.cfg  hole_detection.cfg  penn_indoor_flying.conf  shapes_6dof.conf  slider_depth.conf
mapper_emvs/include/mapper_emvs/: geometry_utils.hpp  mapper_emvs.hpp  pc_geometry.hpp  trajectory.hpp
mapper_emvs/src/: Voxel.pcd  data_loading.cpp  main.cpp  mapper_emvs.cpp  old_plate_pcd.cpp  pc_geometry.cpp  plate_pcd.cpp  plate_pcd.pcd  realsensePCLwrapper.cpp  realtime.cpp
